--- a/MetroInformator/src/main/webapp/static/css/style-shedule-table.css
+++ b/MetroInformator/src/main/webapp/static/css/style-shedule-table.css
@@ -24,7 +24,7 @@ body {
   font-size: 1.4em;
   min-width: 575px;
   box-sizing: border-box;
-    background-image: url(../img/slides/3.png);
+    background-image: url(../images/3.png);
   background-repeat: no-repeat;
   background-position: top left;
   background-size: contain;
@@ -558,17 +558,17 @@ text-transform: uppercase;}
   background-position: 50% 0; }
 
 .cd-form label.cd-firstname {
-  background-image: url("../img/cheese.svg"); }
+  background-image: url("../images/cheese.svg"); }
 
 .cd-form label.cd-lastname {
-  background-image: url("../img/cheese.svg"); }
+  background-image: url("../images/cheese.svg"); }
 
 
 .cd-form label.cd-email {
-  background-image: url("../img/cheese.svg"); }
+  background-image: url("../images/cheese.svg"); }
 
 .cd-form label.cd-password {
-  background-image: url("../img/cheese.svg"); }
+  background-image: url("../images/cheese.svg"); }
 
 .cd-form input {
   margin: 0;
@@ -743,7 +743,7 @@ color: #fff;
   height: 40px;
   right: -40px;
   top: -10px;
-  background: url("../img/cd-icon-close1.svg") no-repeat center center;
+  background: url("../images/cd-icon-close1.svg") no-repeat center center;
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden; }
@@ -865,7 +865,7 @@ color: #fff;
   height: 50px;
   width: 50px;
   border-radius: 50%;
-  background: rgba(255, 255, 255, 1) url(../img/cd-icon-close.svg) no-repeat center center;
+  background: rgba(255, 255, 255, 1) url(../images/cd-icon-close.svg) no-repeat center center;
   /* image replacement */
   overflow: hidden;
   text-indent: 100%;
@@ -905,6 +905,28 @@ background-color: rgba(37, 36, 108, 0.8)
     font-weight: 400;
 }
 
+.register-signin-shedule {
+  margin: -45px 0 0 0;
+  font-size: 12px;
+  font-weight: 400;
+}
+.register-signin-shedule ul li{
+  display: inline-block;
+}
+
+.cd-signup {
+  margin-right: 20px;
+  padding: 10px 50px;
+  border: solid 1px #000;
+  border-radius: 50px;
+  background-color: #fff;
+  color: #000; }
+
+.cd-signup:hover {
+  text-decoration: none;
+  background-color: #817FFE;
+}
+
 .user-avatar {
     color: #000;
     padding: 20px 10px;
@@ -915,7 +937,7 @@ background-color: rgba(37, 36, 108, 0.8)
 .user-avatar:focus,
 .user-avatar:active {
     text-decoration: none;
-    background-image: url("../img/circle.png");
+    background-image: url("../images/circle.png");
     background-repeat: no-repeat;
     background-position: center center;
     transition: all .3s ease;
@@ -1092,7 +1114,7 @@ header ul.nav li a {
 .nav > .active > a:hover,
 .nav > .active > a:focus {
     color: #000;
-    background-image: url("../img/circle.png");
+    background-image: url("../images/circle.png");
     background-repeat: no-repeat;
     border-radius: 50%;
     background-position: center center;
@@ -1100,7 +1122,7 @@ header ul.nav li a {
 
 .nav > li > a:hover {
     color: #000;
-    background-image: url("../img/circle.png");
+    background-image: url("../images/circle.png");
     background-repeat: no-repeat;
     border-radius: 50%;
     background-position: center center;
@@ -1165,7 +1187,7 @@ i.date {
 }
 
 .page {
-background-image: url(../img/slides/2.png);
+background-image: url(../images/2.png);
   background-repeat: no-repeat;
   background-position: left;
   background-size: contain;
