--- a/MetroInformator/src/main/webapp/static/css/main.css
+++ b/MetroInformator/src/main/webapp/static/css/main.css
@@ -6,7 +6,7 @@ body {
 #bottom {
     position: absolute;
     color: #F4F6FC;
-    font: 14px comic;
+    font: 14px Helvetica Neue, regular, serif;
     right: 10px;
     bottom: 5px;
 }
@@ -47,7 +47,7 @@ body {
     padding: 5px;
     width: 260px;
     border: 0;
-    font: 14px comic;
+    font: 14px Helvetica Neue, regular, serif;
     color: #212761;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
@@ -56,10 +56,8 @@ body {
 
 [type='submit'] {
     position: inherit;
-    border: 0;
     background-color: #F4F6FC;
     font-family: robotoregularregular, sans-serif;
-    color: #09bad1;
     border: solid 1px #09bad1;
     font-size: 14px;
     box-sizing: border-box;
@@ -81,7 +79,7 @@ body {
     color: #212761;
     position: inherit;
     border: 0;
-    font: 14px comic;
+    font: 14px Helvetica Neue, regular, serif;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
@@ -106,7 +104,7 @@ body {
     left: 6px;
     top: 90px;
     color: #9C1995;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -119,7 +117,7 @@ body {
     left: 45px;
     top: 109px;
     color: #9C1995;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -132,7 +130,7 @@ body {
     left: 25px;
     top: 129px;
     color: #9C1995;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -145,7 +143,7 @@ body {
     left: 61px;
     top: 150px;
     color: #9C1995;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -158,7 +156,7 @@ body {
     left: 59px;
     top: 169px;
     color: #9C1995;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -171,7 +169,7 @@ body {
     left: 106px;
     top: 250px;
     color: #9C1995;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -184,7 +182,7 @@ body {
     left: 174px;
     top: 280px;
     color: #9C1995;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -197,7 +195,7 @@ body {
     left: 314px;
     top: 328px;
     color: #9C1995;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -210,7 +208,7 @@ body {
     left: 372px;
     top: 422px;
     color: #9C1995;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -223,7 +221,7 @@ body {
     left: 372px;
     top: 442px;
     color: #9C1995;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -236,7 +234,7 @@ body {
     left: 372px;
     top: 462px;
     color: #9C1995;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -249,7 +247,7 @@ body {
     left: 372px;
     top: 482px;
     color: #9C1995;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -262,7 +260,7 @@ body {
     left: 256px;
     top: 25px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -275,7 +273,7 @@ body {
     left: 256px;
     top: 44px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -288,7 +286,7 @@ body {
     left: 256px;
     top: 66px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -301,7 +299,7 @@ body {
     left: 256px;
     top: 86px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -314,7 +312,7 @@ body {
     left: 256px;
     top: 107px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -327,7 +325,7 @@ body {
     left: 256px;
     top: 126px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -340,7 +338,7 @@ body {
     left: 256px;
     top: 148px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -353,7 +351,7 @@ body {
     left: 256px;
     top: 170px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -366,7 +364,7 @@ body {
     left: 256px;
     top: 194px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -379,7 +377,7 @@ body {
     left: 145px;
     top: 296px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -392,7 +390,7 @@ body {
     left: 172px;
     top: 382px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -405,7 +403,7 @@ body {
     left: 254px;
     top: 405px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -418,7 +416,7 @@ body {
     left: 254px;
     top: 425px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -431,7 +429,7 @@ body {
     left: 254px;
     top: 445px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -444,7 +442,7 @@ body {
     left: 254px;
     top: 465px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -457,7 +455,7 @@ body {
     left: 254px;
     top: 485px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -470,7 +468,7 @@ body {
     left: 254px;
     top: 505px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -483,7 +481,7 @@ body {
     left: 254px;
     top: 527px;
     color: #0E7EA3;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -496,7 +494,7 @@ body {
     left: 374px;
     top: 2px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -509,7 +507,7 @@ body {
     left: 374px;
     top: 22px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -522,7 +520,7 @@ body {
     left: 374px;
     top: 42px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -535,7 +533,7 @@ body {
     left: 374px;
     top: 62px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -548,7 +546,7 @@ body {
     left: 374px;
     top: 83px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -561,7 +559,7 @@ body {
     left: 374px;
     top: 103px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -574,7 +572,7 @@ body {
     left: 374px;
     top: 124px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -587,7 +585,7 @@ body {
     left: 374px;
     top: 146px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -600,7 +598,7 @@ body {
     left: 374px;
     top: 170px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -613,7 +611,7 @@ body {
     left: 374px;
     top: 194px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -626,7 +624,7 @@ body {
     left: 253px;
     top: 250px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -639,7 +637,7 @@ body {
     left: 322px;
     top: 348px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -652,7 +650,7 @@ body {
     left: 80px;
     top: 338px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -665,7 +663,7 @@ body {
     left: 62px;
     top: 404px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -678,7 +676,7 @@ body {
     left: 71px;
     top: 423px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -691,7 +689,7 @@ body {
     left: 39px;
     top: 443px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -704,7 +702,7 @@ body {
     left: 81px;
     top: 465px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -717,7 +715,7 @@ body {
     left: 23px;
     top: 485px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -730,7 +728,7 @@ body {
     left: 23px;
     top: 506px;
     color: #BC021E;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -743,7 +741,7 @@ body {
     left: 24px;
     top: 206px;
     color: #088B1C;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -756,7 +754,7 @@ body {
     left: 12px;
     top: 226px;
     color: #088B1C;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -769,7 +767,7 @@ body {
     left: 260px;
     top: 212px;
     color: #088B1C;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -782,7 +780,7 @@ body {
     left: 380px;
     top: 212px;
     color: #088B1C;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -795,7 +793,7 @@ body {
     left: 460px;
     top: 266px;
     color: #088B1C;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -808,7 +806,7 @@ body {
     left: 400px;
     top: 344px;
     color: #088B1C;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -821,7 +819,7 @@ body {
     left: 392px;
     top: 364px;
     color: #088B1C;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -834,7 +832,7 @@ body {
     left: 400px;
     top: 384px;
     color: #088B1C;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -847,7 +845,7 @@ body {
     left: 422px;
     top: 404px;
     color: #088B1C;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -860,7 +858,7 @@ body {
     left: 506px;
     top: 428px;
     color: #088B1C;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -873,7 +871,7 @@ body {
     left: 253px;
     top: 266px;
     color: #C28C04;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -886,7 +884,7 @@ body {
     left: 268px;
     top: 298px;
     color: #C28C04;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -899,7 +897,7 @@ body {
     left: 333px;
     top: 268px;
     color: #C28C04;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -912,7 +910,7 @@ body {
     left: 343px;
     top: 298px;
     color: #C28C04;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -925,7 +923,7 @@ body {
     left: 556px;
     top: 346px;
     color: #C28C04;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -938,7 +936,7 @@ body {
     left: 556px;
     top: 366px;
     color: #C28C04;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -951,7 +949,7 @@ body {
     left: 556px;
     top: 386px;
     color: #C28C04;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
@@ -964,7 +962,7 @@ body {
     left: 556px;
     top: 406px;
     color: #C28C04;
-    font: 10px comic;
+    font: 10px Helvetica Neue, regular, serif;
     padding: 2px;
     cursor: pointer;
     -webkit-border-radius: 4px;
