--- a/MetroInformator/src/main/webapp/static/css/style.css
+++ b/MetroInformator/src/main/webapp/static/css/style.css
@@ -1,15 +1,12 @@
 @charset "UTF-8";
 /* CSS Document */
-@import url("font-awesome.css");
 @import url("subway-font-embedded.css");
 @import url("subway-font-codes.css");
-@import url("animate.css");
+@import url("animation.css");
 @import url("subway-font.css");
 
 @font-face {
     font-family: 'robotoregular';
-    src: url("../fonts/Roboto-Regular-webfont.eot");
-    src: url("../fonts/Roboto-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/Roboto-Regular-webfont.woff2") format("woff2"), url("../fonts/Roboto-Regular-webfont.woff") format("woff"), url("../fonts/Roboto-Regular-webfont.ttf") format("truetype"), url("../fonts/Roboto-Regular-webfont.svg#robotoregular") format("svg");
     font-weight: normal;
     font-style: normal;
 }
@@ -21,7 +18,7 @@ html {
 
 body {
     /*  font-family: robotoregular,sans-serif;*/
-    font-family: Helvetica Neue, regular;
+    font-family: Helvetica Neue, regular,serif;
     font-weight: 100;
     line-height: 1.6em;
     font-size: 1.4em;
@@ -118,413 +115,7 @@ img.img-polaroid {
 ГАМБУРГЕРНОЕ МЕНЮ
 
 -------------------------------- */
-@media (min-width: 769px) {
-    .ham-menu {
-        display: none;
-    }
-}
 
-@media (max-width: 768px) {
-    .ham-menu {
-        display: block;
-    }
-}
-
-ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.drawer-list {
-    z-index: -1;
-    position: fixed;
-    right: 0;
-    top: 0;
-    height: 100vh;
-    width: 100vw;
-    transform: translate(100vw, 0);
-    /* ie workaround */
-    -ms-transform: translatex(-100vw);
-    box-sizing: border-box;
-    pointer-events: none;
-    padding-top: 125px;
-    transition: width 475ms ease-out, transform 450ms ease, border-radius .8s .1s ease;
-    border-bottom-left-radius: 100vw;
-    /*  background-color: rgba(47, 76, 138, 0.8);*/
-    background-color: rgba(37, 36, 108, 0.8);
-}
-
-@media (min-width: 769px) {
-    .drawer-list {
-        width: 40vw;
-    }
-}
-
-.drawer-list ul {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: auto;
-    overflow-x: hidden;
-    pointer-events: auto;
-}
-
-.drawer-list li {
-    list-style: none;
-    text-transform: uppercase;
-    pointer-events: auto;
-    white-space: nowrap;
-    box-sizing: border-box;
-    transform: translatex(100vw);
-    /* ie workaround */
-    -ms-transform: translatex(-100vw);
-}
-
-.drawer-list li:last-child {
-    margin-bottom: 2em;
-}
-
-.drawer-list li a {
-    text-decoration: none;
-    color: #FEFEFE;
-    text-align: center;
-    display: block;
-    padding: 1rem;
-    font-size: calc(24px - .5vw);
-    font-weight: 300;
-}
-
-@media (min-width: 769px) {
-    .drawer-list li a {
-        text-align: right;
-        padding: .5rem;
-    }
-}
-
-.drawer-list li a:hover {
-    cursor: pointer;
-    background-color: rgba(129, 127, 254, 0.5);
-}
-
-.drawer-list li.active a {
-    cursor: pointer;
-    background-color: #817FFE;
-}
-
-input.hamburger {
-    display: none;
-}
-
-input.hamburger:checked ~ .drawer-list {
-    transform: translatex(0);
-    border-bottom-left-radius: 0;
-}
-
-input.hamburger:checked ~ .drawer-list li {
-    transform: translatex(0);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(1) {
-    transition: transform 1s 0.08s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(2) {
-    transition: transform 1s 0.16s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(3) {
-    transition: transform 1s 0.24s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(4) {
-    transition: transform 1s 0.32s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(5) {
-    transition: transform 1s 0.4s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(6) {
-    transition: transform 1s 0.48s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(7) {
-    transition: transform 1s 0.56s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(8) {
-    transition: transform 1s 0.64s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(9) {
-    transition: transform 1s 0.72s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(10) {
-    transition: transform 1s 0.8s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(11) {
-    transition: transform 1s 0.88s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(12) {
-    transition: transform 1s 0.96s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(13) {
-    transition: transform 1s 1.04s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(14) {
-    transition: transform 1s 1.12s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(15) {
-    transition: transform 1s 1.2s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(16) {
-    transition: transform 1s 1.28s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(17) {
-    transition: transform 1s 1.36s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(18) {
-    transition: transform 1s 1.44s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(19) {
-    transition: transform 1s 1.52s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(20) {
-    transition: transform 1s 1.6s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(21) {
-    transition: transform 1s 1.68s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(22) {
-    transition: transform 1s 1.76s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(23) {
-    transition: transform 1s 1.84s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(24) {
-    transition: transform 1s 1.92s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(25) {
-    transition: transform 1s 2s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(26) {
-    transition: transform 1s 2.08s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(27) {
-    transition: transform 1s 2.16s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(28) {
-    transition: transform 1s 2.24s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(29) {
-    transition: transform 1s 2.32s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(30) {
-    transition: transform 1s 2.4s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(31) {
-    transition: transform 1s 2.48s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(32) {
-    transition: transform 1s 2.56s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(33) {
-    transition: transform 1s 2.64s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(34) {
-    transition: transform 1s 2.72s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(35) {
-    transition: transform 1s 2.8s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(36) {
-    transition: transform 1s 2.88s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(37) {
-    transition: transform 1s 2.96s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(38) {
-    transition: transform 1s 3.04s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(39) {
-    transition: transform 1s 3.12s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(40) {
-    transition: transform 1s 3.2s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(41) {
-    transition: transform 1s 3.28s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(42) {
-    transition: transform 1s 3.36s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(43) {
-    transition: transform 1s 3.44s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(44) {
-    transition: transform 1s 3.52s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(45) {
-    transition: transform 1s 3.6s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(46) {
-    transition: transform 1s 3.68s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(47) {
-    transition: transform 1s 3.76s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(48) {
-    transition: transform 1s 3.84s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(49) {
-    transition: transform 1s 3.92s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li:nth-child(50) {
-    transition: transform 1s 4s cubic-bezier(0.29, 1.4, 0.44, 0.96);
-}
-
-input.hamburger:checked ~ .drawer-list li a {
-    padding-right: 15px;
-}
-
-input.hamburger:checked ~ label > i {
-    background-color: transparent;
-    transform: rotate(90deg);
-}
-
-input.hamburger:checked ~ label > i:before {
-    transform: translate(-50%, -50%) rotate(315deg);
-}
-
-input.hamburger:checked ~ label > i:after {
-    transform: translate(-50%, -50%) rotate(-315deg);
-}
-
-input.hamburger:checked ~ label close {
-    color: #FEFEFE;
-    width: 100%;
-}
-
-input.hamburger:checked ~ label open {
-    color: transparent;
-    width: 0;
-}
-
-label.hamburger:hover {
-    cursor: pointer;
-}
-
-label.hamburger text close,
-label.hamburger text open {
-    text-transform: uppercase;
-    font-size: 10px;
-    text-align: center;
-    position: absolute;
-    transform: translateY(50px);
-    text-align: center;
-    overflow: hidden;
-    transition: width .25s .35s, color .45s .35s;
-}
-
-label.hamburger text close {
-    color: transparent;
-    right: 0;
-    width: 0;
-}
-
-label.hamburger text open {
-    color: #2f4c8a;
-    width: 90%;
-}
-
-label.hamburger > i {
-    position: absolute;
-    width: 50%;
-    height: 2px;
-    top: 50%;
-    background-color: #fff;
-    pointer-events: auto;
-    transition-duration: .35s;
-    transition-delay: .35s;
-}
-
-label.hamburger > i, label.hamburger > i:before, label.hamburger > i:after {
-    margin-right: 20px;
-}
-
-label.hamburger > i:before, label.hamburger > i:after {
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 2px;
-    left: 50%;
-    background-color: #fff;
-    content: "";
-    transition: transform 0.35s;
-    transform-origin: 50% 50%;
-}
-
-label.hamburger > i:before {
-    transform: translate(-50%, -14px);
-}
-
-label.hamburger > i:after {
-    transform: translate(-50%, 14px);
-}
-
-label.hamburger {
-    position: fixed;
-    /*  top: 64px;*/
-    right: 15px;
-    height: 25px;
-    width: 40px;
-    background-color: #000;
-    border-radius: 50%;
-    padding: 50px;
-}
 
 /* -------------------------------- 
 
@@ -816,7 +407,6 @@ label.hamburger {
     display: inline-block;
     position: absolute;
     right: 0;
-    top: 0;
     padding: 6px 15px;
     border-left: 1px solid #93A6AF;
     top: 50%;
@@ -831,7 +421,6 @@ label.hamburger {
     display: inline-block;
     position: absolute;
     right: 0;
-    top: 0;
     padding: 6px 15px;
     border-left: 1px solid #93A6AF;
     top: 50%;
@@ -1438,7 +1027,6 @@ header ul.nav li a {
 }
 
 .auth .auth-box .legend > p {
-    color: #8FA4AF;
     font-family: robotoregularregular, sans-serif;
     width: 100%;
     text-align: center;
@@ -1811,7 +1399,6 @@ form {
 */
 .flex-caption {
     zoom: 1;
-    bottom: 198px;
     background: none;
     color: #817FFE;
     height: 100%;
@@ -1934,9 +1521,9 @@ form {
         float: left;
     }
 
-    info-blocks-in {
-        float: right;
-    }
+    /*info-blocks-in {*/
+        /*float: right;*/
+    /*}*/
 
     .left {
         text-align: right;
@@ -2350,7 +1937,7 @@ figure.effect-duke:hover p {
     height: 580px;
     margin: 0;
     right: 0;
-    background-image: url(../images/5.jpg);
+    background-image: url(../images/5.png);
     background-repeat: no-repeat;
     background-position: right;
     background-size: cover;
@@ -2361,10 +1948,8 @@ figure.effect-duke:hover p {
     zoom: 1;
     background-color: transparent;
     color: #2f4c8a;
-    margin: 0;
     text-align: center;
     margin: 0 auto;
-    right: 0px;
     display: inline-block;
     bottom: 50%;
     width: 90%;
@@ -2385,7 +1970,6 @@ figure.effect-duke:hover p {
 
 #consult-img p {
     line-height: 35px;
-    font-weight: 300;
     color: #2f4c8a;
     margin: 2px;
     font-size: 30px;
@@ -2796,7 +2380,6 @@ ul.social-network1 {
 }
 
 ul.social-network1 li {
-    display: inline;
     margin: 0 5px;
     border: 1px solid #FFEB3B;
     padding: 5px 0 0;
@@ -3133,4 +2716,5 @@ a.scrollup i:hover {
         display: block;
         padding: 5px 0;
     }
+}
 
