--- a/MetroInformator/src/main/webapp/static/css/subway-font-embedded.css
+++ b/MetroInformator/src/main/webapp/static/css/subway-font-embedded.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'subway-font';
+    font-family: 'subway-font', serif;
     font-weight: normal;
     font-style: normal;
 }
@@ -22,7 +22,7 @@
 */
 
 [class^="icon-"]:before, [class*=" icon-"]:before {
-    font-family: "subway-font";
+    font-family: "subway-font", serif;
     font-style: normal;
     font-weight: normal;
     speak: none;
