--- a/MetroInformator/src/main/webapp/static/css/subway-font-ie7.css
+++ b/MetroInformator/src/main/webapp/static/css/subway-font-ie7.css
@@ -1,5 +1,5 @@
 [class^="icon-"], [class*=" icon-"] {
-    font-family: 'subway-font';
+    font-family: 'subway-font', serif;
     font-style: normal;
     font-weight: normal;
 
