--- a/MetroInformator/src/main/webapp/static/css/subway-font.css
+++ b/MetroInformator/src/main/webapp/static/css/subway-font.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'subway-font';
+    font-family: 'subway-font', serif;
     font-weight: normal;
     font-style: normal;
 }
@@ -16,7 +16,7 @@
 */
 
 [class^="icon-"]:before, [class*=" icon-"]:before {
-    font-family: "subway-font", serif;
+    font-family: 'subway-font', serif;
     font-style: normal;
     font-weight: normal;
     speak: none;
